syntax = "proto3";

package chat;

option go_package = "github.com/weiawesome/wes-io-live/proto/chat";

service ChatDeliveryService {
  rpc DeliverMessage(DeliverMessageRequest) returns (DeliverMessageResponse);
  rpc DeliverSystemMessage(DeliverSystemMessageRequest) returns (DeliverSystemMessageResponse);
}

message ChatMessagePayload {
  string message_id = 1;
  string user_id = 2;
  string username = 3;
  string room_id = 4;
  string session_id = 5;
  int64  timestamp_unix_ms = 6;
  string content = 7;
}

message DeliverMessageRequest {
  string room_id = 1;
  string session_id = 2;
  ChatMessagePayload message = 3;
}

message DeliverMessageResponse {
  bool   success = 1;
  int32  delivered_count = 2;
  string error_message = 3;
}

message DeliverSystemMessageRequest {
  string room_id = 1;
  string session_id = 2;
  string content = 3;
  string system_event_type = 4;
}

message DeliverSystemMessageResponse {
  bool   success = 1;
  int32  delivered_count = 2;
  string error_message = 3;
}
